--- a/malaria-ios/Base.lproj/Main.storyboard
+++ b/malaria-ios/Base.lproj/Main.storyboard
@@ -343,6 +343,9 @@
                                         <state key="normal" image="WhereAmIIcon">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="findMyLocation:" destination="cfZ-pD-OHm" eventType="touchUpInside" id="cFu-c5-mtk"/>
+                                        </connections>
                                     </button>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="mm" borderStyle="roundedRect" placeholder="mm" textAlignment="center" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="mus-N9-dkJ">
                                         <rect key="frame" x="176" y="158" width="37" height="30"/>
@@ -478,6 +481,9 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="generateTrip:" destination="cfZ-pD-OHm" eventType="touchUpInside" id="66G-Ok-iXx"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -503,6 +509,14 @@
                         </variation>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="PlanTripIcon" id="YVj-9J-zFH"/>
+                    <connections>
+                        <outlet property="dayValuePicker" destination="buv-20-bVO" id="XSE-cZ-NoG"/>
+                        <outlet property="location" destination="wsy-a8-zYC" id="4pc-k4-OmW"/>
+                        <outlet property="medicationList" destination="sfY-xl-1No" id="Bec-bH-kjT"/>
+                        <outlet property="monthValuePicker" destination="mus-N9-dkJ" id="Cpe-fQ-IEo"/>
+                        <outlet property="parkingList" destination="yRe-ea-anp" id="2uq-sH-PYg"/>
+                        <outlet property="yearValuePicker" destination="8vo-px-Wpd" id="B8K-r9-oZb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6BS-cb-c7D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
